test/compile_errors/err_labeled_duplicate_active.w
//! expect-check-fail: nested duplicate active label 'outer

fn main:
    'outer while true:
        'outer for i in 0..3:
            break 'outer
